--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     provider: ^5.0.0
     google_fonts: ^2.0.0
     shared_preferences: ^2.0.5
+    http: ^0.13.3
 
 dev_dependencies:
     flutter_test:
