--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
     shared_preferences: ^2.0.5
     http: ^0.13.3
     translator: ^0.1.7
+    mapbox_search: any
+    mapbox_search_flutter: any
+    geolocator: any
+    geocoder:
+    geocoding: ^2.0.0
+    carousel_slider: ^3.0.0
 
 dev_dependencies:
     flutter_test:
