--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
     google_fonts: ^2.0.0
     shared_preferences: ^2.0.5
     http: ^0.13.3
+    flutter_datetime_picker: ^1.5.1
+    time_picker_widget: ^1.0.0+10
+    get_it: ^7.2.0
+    qr_flutter: ^4.0.0
+    dio: ^4.0.0
+    file_utils: ^0.1.3
+    syncfusion_flutter_pdfviewer:
+    ndialog: ^4.1.0
+    permission_handler:
     translator: ^0.1.7
 
 dev_dependencies:
