--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,15 @@ dependencies:
     geocoder:
     geocoding: ^2.0.0
     carousel_slider: ^3.0.0
+    google_maps_flutter: ^2.1.0
+    maps_launcher: ^2.0.1
+    flutter_facebook_auth: ^3.5.2
+    flutter_login_facebook: ^1.2.0
+    flutter_facebook_auth_platform_interface: ^2.7.0
+    flash: ^1.2.0
+    modal_progress_hud: ^0.1.3
+
+
 
 dev_dependencies:
     flutter_test:
