--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dependencies:
     flutter_facebook_auth_platform_interface: ^2.7.0
     flash: ^1.2.0
     modal_progress_hud: ^0.1.3
-
+    comment_box: ^0.0.16
 
 
 dev_dependencies:
