--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     font_awesome_flutter: ^9.0.0
     flutter_rating_bar: ^4.0.0
-    smooth_page_indicator: ^0.3.0-nullsafety.0
+    smooth_page_indicator: ^1.0.0+2
     intl: ^0.17.0
-    provider: ^5.0.0
+    provider: ^6.0.2
     google_fonts: ^2.0.0
     shared_preferences: ^2.0.5
     http: ^0.13.3
@@ -41,7 +41,7 @@ dependencies:
     get_it: ^7.2.0
     qr_flutter: ^4.0.0
     dio: ^4.0.0
-    file_utils: ^0.1.3
+    file_utils: ^1.0.1
     syncfusion_flutter_pdfviewer:
     ndialog: ^4.1.0
     permission_handler:
@@ -51,16 +51,16 @@ dependencies:
     geolocator: any
     geocoder:
     geocoding: ^2.0.0
-    carousel_slider: ^3.0.0
+    carousel_slider: ^4.0.0
     google_maps_flutter: ^2.1.0
     maps_launcher: ^2.0.1
-    flutter_facebook_auth: ^3.5.2
+    flutter_facebook_auth: ^4.0.1
     flutter_login_facebook: ^1.2.0
-    flutter_facebook_auth_platform_interface: ^2.7.0
-    flash: ^1.2.0
+    flutter_facebook_auth_platform_interface: ^3.0.1
+    flash: ^2.0.3+2
     modal_progress_hud: ^0.1.3
     comment_box: ^0.0.16
-
+    flat_icons_flutter: ^1.0.2
 
 dev_dependencies:
     flutter_test:
