--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,11 @@ dependencies:
     modal_progress_hud: ^0.1.3
     comment_box: ^0.0.16
     flat_icons_flutter: ^1.0.2
+    url_launcher:
+    material_design_icons_flutter: 5.0.6595
+    flutter_time_picker_spinner: ^2.0.0
+
+
 
 dev_dependencies:
     flutter_test:
